# marl-forecast-game

./: .dockerignore  .env.example  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DRD.md  Dockerfile  PRD.md  README.md  TRD.md  docker-compose.yml  environment.yml  mypy.ini  pyproject.toml  requirements.txt  run_project_tests.py
.github/workflows/: ci.yml
benchmarks/: run_benchmark.py
data/: sample_demand.csv
data/cache/: bea.json  bis.json  eurostat.json  fred.json  fred_training.json  gpr.json  imf.json  kalshi.json  oecd_cli.json  polymarket.json  predictit.json  worldbank.json
data/models/: forecaster_q.json
data/sample/: README.md  sample_demand_excerpt.csv
docs/: agents.md  architecture.md  bayesian-aggregation.md  configuration.md  data-pipeline.md  deployment.md  disturbances-and-defenses.md  haskell-migration.md  literature.md  llm-integration.md  mnpo_integration.md  theory.md  training.md  validation.md
experiments/: run_reproducibility_check.py
framework/: __init__.py  agents.py  aggregation.py  backtesting.py  data.py  data_utils.py  defenses.py  distributed.py  disturbances.py  equilibria.py  equilibrium.py  exceptions.py  export.py  game.py  hyperopt.py  metrics.py  mnpo_loss.py  observability.py  opponent_population.py  preference_oracle.py  qualitative.py  ray_actors.py  refactor.py  rllib_env.py  scenarios.py  strategy_runtime.py  topology.py  training.py  types.py  validation_scenarios.py  verify.py
framework/agents/: __init__.py  adversarial.py  base.py  evolutionary.py  hierarchical.py  registry.py
framework/data_sources/: __init__.py  base.py  bea.py  beige_book.py  bis_policy_rate.py  earnings.py  eurostat.py  geopolitical_risk.py  kaggle_demand.py  kalshi.py  macro_fred.py  macro_imf.py  oecd_cli.py  pmi.py  prediction_polymarket.py  predictit.py  retry.py  world_bank.py
framework/llm/: __init__.py  audit.py  base.py  client.py  mock.py  ollama.py  ollama_interface.py  refiner.py
haskell/: marl-forecast-game.cabal
haskell/app/: Main.hs
haskell/src/: Game.hs  Types.hs
haskell/test/: Main.hs
infra/: alert_rules.yml  prometheus-standalone.yml  prometheus.yml  supervisord.conf
infra/grafana-standalone/provisioning/dashboards/: dashboard.yml
infra/grafana/dashboards/: cluster_health.json  simulation_metrics.json
marl_forecast_game/: __init__.py  api.py
notebooks/: README.md  quickstart_api.ipynb
planning/: IMPLEMENTATION_REPORT.md  TODO_001.md  TODO_002.md  TODO_003.md  TODO_004.md  TODO_005_IMPLEMENTATION_PLAN.md  TODO_006.md  TODO_007.md  TODO_008.md  TODO_009_advanced-marl-defenses.md  TODO_010_ENH-Ray-Parallelism-and-Observability.md  TODO_011_Qualitative-Narratives-Ingestion-and-State-Expansion.md  TODO_012_single-container_supervisord_dockerization.md  TODO_013_next-stage-production-readiness.md  backtest_report.json  test_suite_report.json  test_suite_summary.csv  validation_scenarios_report.json  validation_scenarios_summary.csv  verification_report.json
results/: mnpo_benchmark.txt
results/benchmarks/: benchmark_summary.json  benchmark_summary.md
results/experiments/: reproducibility_check.json
scripts/: fetch_test_data.py  run_all_pipeline.sh  run_backtest.py  run_container_test_harness.sh  run_simulation.py  run_stress_test.py  run_test_suite.py  run_training.py  run_validation_scenarios.py  run_verification.py  validate.sh
tests/: test_agents.py  test_data_utils.py  test_defenses_identity.py  test_distributed.py  test_equilibria.py  test_framework.py  test_llm.py  test_marl_integration.py  test_mnpo.py  test_observability.py  test_package_api.py  test_properties.py  test_topology.py  test_training.py  test_verify.py
ui/: app.py  utils.py
ui/pages/: agents.py  dag.py  findings.py  home.py  lineage.py  llm.py  metrics.py  performance.py  replay.py  training_viz.py  whatif.py
