[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marl-forecast-game"
version = "0.1.0"
description = "Research-grade multi-agent adversarial forecasting with Markov games, probabilistic scoring, and reproducible experiments"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "Tripp Smith" },
]
keywords = [
    "forecasting",
    "multi-agent-reinforcement-learning",
    "markov-games",
    "probabilistic-forecasting",
    "robustness",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "hypothesis==6.136.9",
    "numpy==1.26.4",
    "networkx==3.4.2",
    "scipy==1.13.1",
    "scikit-learn==1.5.2",
    "bayesian-optimization==1.5.1",
    "pyyaml==6.0.2",
    "prometheus_client==0.20.0",
    "structlog==24.4.0",
    "opentelemetry-api==1.28.2",
    "opentelemetry-sdk==1.28.2",
    "opentelemetry-exporter-otlp==1.28.2",
    "streamlit==1.40.1",
    "plotly==5.24.1",
    "requests==2.32.3",
    "pydantic==2.9.2",
    "hmmlearn==0.3.3",
    "psutil==6.1.0",
]

[project.urls]
Homepage = "https://github.com/tripp-smith/marl-forecast-game"
Documentation = "https://github.com/tripp-smith/marl-forecast-game/tree/main/docs"
Repository = "https://github.com/tripp-smith/marl-forecast-game"
Issues = "https://github.com/tripp-smith/marl-forecast-game/issues"

[project.optional-dependencies]
distributed = [
    "ray[default]>=2.9,<3.0",
]
dev = [
    "mypy==1.11.2",
    "pytest==8.3.3",
    "pytest-cov==6.0.0",
    "pytest-mock==3.14.0",
]

[tool.setuptools.packages.find]
include = ["framework*", "marl_forecast_game*", "ui*"]

[tool.pytest.ini_options]
# addopts = "--cov=framework --cov-report=term-missing"
# Uncomment the above line when pytest-cov is installed

[tool.coverage.run]
source = ["framework"]
omit = ["framework/__pycache__/*"]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "except ImportError",
]
