cabal-version:      2.4
name:               marl-forecast-game
version:            0.1.0.0
build-type:         Simple

library
  hs-source-dirs:      src
  exposed-modules:     Game, Types
  build-depends:       base >=4.14 && <5
  default-language:    Haskell2010

test-suite transition-spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base, marl-forecast-game, QuickCheck
  default-language:    Haskell2010
